a1/brendan_gordon/TEST_PROGRAMS/invalidtype/alexandre_st-louis_fortier/001-redeclaration.min
var printf : string;
var a : int;
var b : int;
var a__ : float;
var printf : string;

